--- a/styles/main.css
+++ b/styles/main.css
@@ -3,6 +3,7 @@ body {
 	background: #B4D8E7;
 	font-family: 'Hind', sans-serif;
 }
+
 h1 {
 	text-align: center;
 	font-size: 22px;
@@ -10,23 +11,58 @@ h1 {
 	width: 500px;
 	margin: 25px auto 25px auto;
 }
-form {
-	margin-bottom: 15px;
+
+/*.slider.round {
+  border-radius: 34px;
 }
-#input-box {
-	width: 450px;
-	height: 35px;
-	margin: 25px 0 15px 16px;
-	font-size: 16px;
-	text-indent: 5px;
-	padding-bottom: 0;
-	border: 1px solid #999;
-	border-radius: 5px;
-	background: #f5fafa;
+
+.slider.round:before {
+  border-radius: 50%;
 }
-#input-box:focus {
-	outline: none;
+
+.switch {
+  position: relative;
+  display: inline-block;
+  width: 60px;
+  height: 34px;
 }
-.btn {
-	margin-left: 14px;
+
+.switch input {display:none;}
+
+.slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #ccc;
+  -webkit-transition: .4s;
+  transition: .4s;
 }
+
+.slider:before {
+  position: absolute;
+  content: "";
+  height: 26px;
+  width: 26px;
+  left: 4px;
+  bottom: 4px;
+  background-color: white;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+input:checked + .slider {
+  background-color: #2196F3;
+}
+
+input:focus + .slider {
+  box-shadow: 0 0 1px #2196F3;
+}
+
+input:checked + .slider:before {
+  -webkit-transform: translateX(26px);
+  -ms-transform: translateX(26px);
+  transform: translateX(26px);
+}*/
